# homemgmt242a1b90-2701-4c6b-9f36-f15e6569746b

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: addEntity_service.py  addService_service.py  createEntity_service.py  createRoom_service.py  createUser_service.py  deleteEntity_service.py  deleteUser_service.py  getRoomDetails_service.py  getTests_service.py  getUser_service.py  listEntitiesByRoom_service.py  listEntities_service.py  listRooms_service.py  listServices_service.py  login_service.py  logout_service.py  server.py  updateEntity_service.py  updateRoom_service.py  updateService_service.py  updateUser_service.py
